default/partials/_page-setup.scss
// _page-setup.scss

@page { 
    size: $page-width $page-height;
    margin-top: $margin-top;
    margin-bottom: $margin-bottom;
    padding: 0;
    marks: $crop-marks;
    // Not yet supported in paged.js:
    bleed: $bleed; // https://gitlab.pagedmedia.org/tools/pagedjs/issues/82
    trim: $trim;
    pdf-page-colorspace: $colorspace;
}
@page :left {
    margin-left: $margin-outside;
    margin-right: $margin-inside;
}
@page :right {
    margin-left: $margin-inside;
    margin-right: $margin-outside;
}

// Paged.js on-screen display

@media only screen {
    // Background ('pasteboard')
    html {
        background-color: $color-pasteboard;
        padding: $line-height-default;
    }
    // Show page border in browser view
    .pagedjs_page {
        background-color: $color-paper;
        box-shadow: 0px 0px 0.1px lightblue;
        margin-bottom: $line-height-default;
    }
    // Show single pages or spreads
    @if $paged-display == "spreads" {
        .pagedjs_left_page {
            float: left;
        }
        .pagedjs_first_page {
            margin-left: $page-width;
        }
    }
}

